# azuretests

./: .gitignore  Dockerfile  pyproject.toml
azuretests/: app.py  env_vars.py  loader.py  main.py  payload.py
scripts/: format.sh  lint.sh
tests/: __init__.py
tests/blackbox/: conftest.py
tests/blackbox/image/: conftest.py  test_image.py
