[project]
name = "azuretests"
version = "0.0.0"
description = "azure load"
authors = [{name="Dev Team", email="server@biocatch.com>"}]
dynamic = ["dependencies", "requires-python"]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
envolved = "*"
backendcommon = {version="^11.21.0", source = "biocatch"}
bc-metrics = {version="^2.0.0", source="biocatch"}
bc-logging = {version="^1.4.0", source="biocatch"}
rook = "^0.1.209"


[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
pytest-gather-fixtures = "^0.1.0"
pytest = "8.1.1"  # TODO: remove this pinning
pytest-asyncio = "0.21.1"  # Keep this until they fix their bug which prevented from running tests
pytest-cov = "^6.1.1"
async-asgi-testclient = "^1.4.6"
ruff = "^0.11.8"
mypy = "^1.15.0"
yellowbox = {version="^0.8.1"}
yellowbox-statsd = "^0.1.0"
bc-dev-tools = {version="^1.0.0", source="biocatch"}
pytest-test-grouping = "^1.0.3b0"
towncrier = "*"
tenacity = "^9.0.0"
python-on-whales = "^0.78.0"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[[tool.poetry.source]]
name = "biocatch"
url = "https://biocatchdev.jfrog.io/biocatchdev/api/pypi/pypi/simple"
priority = 'explicit'

[tool.ruff]
target-version = "py311"
line-length = 120
output-format = "full"
[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["I", "E", "W", "F", "N", "S", "BLE", "COM", "C4", "ISC", "ICN", "G", "PIE", "T20", "PYI", "Q", "SLF", "SIM",
          "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF", "PT", "UP", "B", "ANN", "ASYNC", "FBT003", "A", "INP",
          "SLOT", "TID", "PTH", "FLY", "PERF"]
# should be included later: RET?, ARG, TRY, DTZ?, FA, RSE?, TCH?
ignore = [
    "ISC001",  # ruff format handles this
    "COM812",  # trailing comma, handled by black
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments to function call
    "PLR0912",  # too many branches
    "PLR0911",  # Too many return statements
    "PLR0915",  # too many statements
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "SIM105",  # Use `contextlib.suppress(...)` instead of try-except-pass
    "S101",  # assert detected
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "SIM118",  # Use `key in {}` instead of `key in {}.keys()`
    "SIM112",  # Use capitalized environment variable
    "S311", # use of non-cryptographic random
    "ANN401",  # Dynamic type annotation
    "A003",  # class attribute shadows built-in
]

[tool.ruff.lint.isort]
combine-as-imports=true

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.flake8-pytest-style]
raises-require-match-for = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"numpy".msg = "Don't use numpy directly"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",  # annotations
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "S105",  # Possible hardcoded password
    "S113",  # Probable use of requests call without timeout
    "PIE804", # Unnecessary `dict` kwargs
    "PT013",  # Found incorrect import of pytest, use simple `import pytest` instead
    "PT004", # Fixture does not return anything, add leading underscore
    "BLE001",  # BLE001 Do not catch blind exception: `Exception`
    "F405",  # name may be undefined, or defined from star imports
    "F403",  # star import used; unable to detect undefined names
    "T201",  # `print` found
    "SLF001",  # Private member accessed
    "PLC1901", # simplify str == ""
    "B018",  # useless expression
    "FBT",  # boolean params
    "A",  # builtin shadowing
    "INP",  # implicit namespace packages
    "PTH",  # use pathlib
    "PERF",  # performance anti-patterns
]

[tool.towncrier]
name = "azuretests"
directory = "newsfragments"
filename = "CHANGELOG.md"
template = "newsfragments/changelog_template.md.jinja"
ignore=["changelog_template.md.jinja"]
issue_format = "[{issue}](https://biocatch.atlassian.net/browse/{issue})"
title_format = "## [{version}](https://github.com/biocatchltd/azuretests/tree/{version}) ({project_date})"
underlines = ["", "", ""]
[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true
[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true
[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true
[[tool.towncrier.type]]
directory = "dbump"
name = "dbump"
showcontent = true
[[tool.towncrier.type]]
directory = "dbump_pending"
name = "dbump_pending"
showcontent = false
check = false

[tool.poetry_lock_listener]
package_changed_hook="bc_dev_tools.on_dbump.create_newsfragment:create_newsfragment"
